<resources>
    <string name="app_name">Flickr</string>
    <string name="flickr_icon">Flickr icon</string>
    <string name="todo">TODO</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="not_a_flickr_members">Not a Flickr members?</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="english">English</string>
    <string name="terms">Terms</string>
    <string name="privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_in_to_flickr">Login in to Flickr</string>
    <string name="login">Log in</string>
    <string name="sign_up_for_flickr">Sign up for Flickr</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_sign_up">By signing up, you agree with Flick\'s Term ofService and Privacy Policy.</string>
    <string name="already_a_flickr_member_log_in_here">Already a Flickr member? Log in here.</string>
    <string name="password">Password</string>
    <string name="your_age">Your age</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="remember_email_address">Remember email address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="short_thing">Short thing</string>
    <string name="something_long_will_be_here">Something long will be here</string>
    <string name="value">Value</string>
    <string name="_0h">0h</string>
    <string name="something_really_long">Something really long gggggggggggggggggggggggggggggggggggggggggggg</string>
    <string name="comments">Comments</string>
    <string name="reply">Reply</string>
    <string name="search_flickr">Search Flickr</string>
    <string name="notification">Notification</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="profile">Profile</string>

</resources>