<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/newsfeedFragment"
        android:icon="@drawable/ic_baseline_format_align_left_24"
        android:title="@string/newsfeed" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/cameraFragment"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        android:title="@string/camera" />

    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_baseline_notifications_none_24"
        android:title="@string/notification" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_perm_identity_24"
        android:title="@string/profile" />
</menu>