<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragments.LoginFragment">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/flickr_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_in_to_flickr"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ctn_pass_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:hint="@string/password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pass_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
        android:layout_width="350dp"
        android:layout_height="25sp"
        android:layout_gravity="center"
        android:text="@string/remember_email_address" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="350dp"

        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#118FDC"
        android:text="@string/next" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/hyper_text" />

    <View
        android:id="@+id/line"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#737272" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/not_a_flickr_members" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:linksClickable="true"
            android:text="@string/sign_up_here"
            android:textColor="@color/hyper_text"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:text="@string/english"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/tv_help_login"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginEnd="10dp"
                android:text="@string/help"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_privacy_login"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/privacy"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_term_login"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/terms"
                android:textSize="18sp" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>