<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/avatarUserComment"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/star_679" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:minHeight="50dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/userNameComment_cmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/short_thing"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/commentContent_cmt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginBottom="15dp"
            android:text="@string/something_long_will_be_here" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reply"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>