<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:background="@color/white"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imagePost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/bird" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avaImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/user_ava" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName_newsfeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/something_long_will_be_here"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_thing"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/timeOfPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginEnd="12dp"
            android:text="@string/_0h" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/likeButton_nf"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/star_679"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/likeOfPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/value"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/commentButton_nf"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_insert_comment_24"
            app:tint="@color/grey"
            tools:ignore="TouchTargetSizeCheck" />


        <TextView
            android:id="@+id/commentOfPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/value"
            tools:ignore="RtlSymmetry" />

        <ImageButton
            android:id="@+id/shareButton_nf"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_baseline_share_24"
            app:tint="@color/grey"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E5E5E5"
        android:minHeight="50dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_star_24" />

            <TextView
                android:id="@+id/listOfLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:minHeight="25dp"
                android:text="@string/something_really_long"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_baseline_insert_comment_24" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userName_comment_nf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/short_thing"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/commentContent_newsfeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/something_long_will_be_here"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>